# src/controllers/UserController.js
@@ -1,6 +1,6 @@
 import UserService from '../services/UserService';
-import Responses from '../utils/Responses';
 import Helper from '../utils/Helper';
+import Responses from '../utils/Responses';
 
 /**
  * @class
@@ -47,12 +47,69 @@ export default class UserController {
   static signin(req, res) {
     const loginCredentials = req.body;
     UserService.signin(loginCredentials).then(response => {
-      const token = Helper.generateToken({ id: response.id, email: response.email });
+      const token = Helper.generateToken({ 
+        id: response.id, email: response.email,
+        isVerified: response.isVerified,
+        role: response.role,
+      });
       Responses.setSuccess(200, 'Login successful.', { token, ...response });
       return Responses.send(res);
     }).catch(() => {
       Responses.setError(500, 'database error');
       return Responses.send(res);
     });
+  }
+
+  /**
+   * @method updateUserProfile
+   * @description Implements userprofile settings endpoint
+   * @static
+   * @param {object} req - Request object
+   * @param {object} res - Response object
+   * @returns {object} JSON response
+   * @memberof UserController
+   */
+  static updateUserProfile(req, res) {
+    const { body, user, params } = req;
+    if (user.email !== params.email){
+      Responses.setError(401, 'You are not allowed to edit this profile');
+      return Responses.send(res);
+    }
+    UserService.updateUser(body, user.id, params.email)
+      .then(updateUser => {
+        console.log(updateUser)
+        delete updateUser[0].dataValues.password;
+        Responses.setSuccess(201, updateUser[0], 'user account updated successfully');
+        return Responses.send(res);
+      }).catch(() => {
+          Responses.setError(500, 'database error');
+          return Responses.send(res);
+      });
+  }
+
+  /**
+   * @method retrieveUserProfile
+   * @description Implements userprofile settings endpoint
+   * @static
+   * @param {object} req - Request object
+   * @param {object} res - Response object
+   * @returns {object} JSON response
+   * @memberof UserController
+   */
+  static retrieveUserProfile(req, res) {
+    const {user, params} = req;
+    if (user.email !== params.email){
+      Responses.setError(401, 'You are not allowed to see this profile');
+      return Responses.send(res);
+    }
+    UserService.retrieveUser(user.id, params.email)
+      .then(retrieveUser => {
+        delete retrieveUser.dataValues.password;
+        Responses.setSuccess(200, retrieveUser, 'user account retrieved successfully');
+        return Responses.send(res);
+      }).catch(() => {
+          Responses.setError(500, 'database error');
+          return Responses.send(res);
+      });
   }
 }
