# src/database/seeders/20190911231139-request.js
@@ -8,5 +8,27 @@ module.exports = {
     reason: 'New office',
     createdAt: new Date(),
     updatedAt: new Date()
+  },
+  {
+    userId: 5,
+    origin: 'Toronto',
+    destination: 'Madgasscar',
+    type: 'one-way',
+    departureDate: '2013-11-19',
+    reason: 'New Engagement',
+    managerId: 1,
+    createdAt: new Date(),
+    updatedAt: new Date()
+  },
+  {
+    userId: 5,
+    origin: 'Texas',
+    destination: 'Syria',
+    type: 'one-way',
+    departureDate: '2020-03-15',
+    reason: 'Relocation',
+    managerId: 1,
+    createdAt: new Date(),
+    updatedAt: new Date()
   }], {})
 };
