# src/utils/validationSchema.js
@@ -1,13 +1,8 @@
 import Joi from '@hapi/joi';
 
-const name = Joi.string().trim().required().regex(/^[A-Za-z]+$/)
-  .min(3);
-
-const firstName = name
-  .label('firstname is required, must be alphabets only and have at least 3 characters');
-
-const lastName = name
-  .label('lastname is required, must be alphabets only and have at least 3 characters');
+const name = Joi.string().trim().min(3).regex(/^[A-Za-z]+$/)
+  .required();
+const otherUserFields = Joi.string().trim().allow(null, '');
 
 const email = Joi.string().trim().lowercase().email()
   .required()
@@ -23,14 +18,39 @@ const date = Joi.date().iso();
 
 export default {
   signup: Joi.object().keys({
-    firstName,
-    lastName,
+    firstName: name
+      .label('firstName is required, must be alphabets only and have at least 3 characters'),
+    lastName: name
+      .label('lastName is required, must be alphabets only and have at least 3 characters'),
     email,
-    password
+    password: Joi.string().required().regex(/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.{8,})/)
+      .label('password is required, must be at least 8 characters and must'
+      + ' contain at least a number, one lowercase and one uppercase alphabet')
   }),
   signin: Joi.object().keys({
     email,
     password: Joi.string().required().label('password is required')
+  }),
+  emailParam: Joi.object().keys({
+    email,
+  }),
+  profile: Joi.object().keys({
+    firstName: name
+      .label('firstName is required, must be alphabets only and have at least 3 characters'),
+    lastName: name
+      .label('lastName is required, must be alphabets only and have at least 3 characters'),
+    birthDate: Joi.date().iso().allow(null, '')
+      .label('date, must be in this format YYYY-MM-DD'),
+    preferredLanguage: otherUserFields
+      .label('preffered language can be English, French,..etc'),
+    gender: Joi.any().valid(['Male', 'Female', 'Other']).allow(null, '')
+      .label('gender can be either Male, Female or Other'),
+    address: otherUserFields.label('address is required'),
+    department: otherUserFields.label('please specify your current department'),
+    lineManager: otherUserFields.label('please specify your current line manager'),
+    role: otherUserFields.label('please specify your roles'),
+    phoneNumber: otherUserFields.regex(/^[0-9]{10,14}$/)
+      .label('please only enter a valid phone number'),
   }),
   request: Joi.object().keys({
     origin: required.label('origin is required'),
